[package]
name = "ledger-lsp"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "*"

[dependencies]
anyhow = "1.0.93"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-std",
    "macros",
] }
tower-lsp = { version = "0.20", features = ["runtime-tokio"] }
tree-sitter = "0.24"
tree-sitter-ledger = { path = "../tree-sitter/tree-sitter-ledger" }
type-sitter = { version = "0.5.2", default-features = false }
walkdir = "2.5.0"
# tree-sitter-ledger = { git = "https://github.com/cbarrete/tree-sitter-ledger.git", rev = "8a841fb20ce683bfbb3469e6ba67f2851cfdf94a" }

[dev-dependencies]
insta = "1.39.0"
textwrap = "0.16.1"
