[package]
name = "ledger-language-server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "*"

[dependencies]
anyhow = "1.0.93"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-std",
    "macros",
] }
tower-lsp = { version = "0.20", features = ["runtime-tokio"] }
tree-sitter = "0.24"
# local dev
# tree-sitter-ledger = { path = "../tree-sitter/tree-sitter-ledger" }
# temp: forked upstream
tree-sitter-ledger = { git = "https://github.com/claytonrcarter/tree-sitter-ledger.git", rev = "44d611e5eb0ec7a8cd11fa35b4f2e5c28a492ee4" }
# actual upstream
# tree-sitter-ledger = { git = "https://github.com/cbarrete/tree-sitter-ledger.git", rev = "8a841fb20ce683bfbb3469e6ba67f2851cfdf94a" }
type-sitter = { version = "0.5.2", default-features = false }
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.39.0"
textwrap = "0.16.1"
