[package]
name = "ledger-language-server"
version = "0.0.6"
edition = "2021"

[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
todo = "warn"

[build-dependencies]
cc = "*"

[dependencies]
anyhow = "1.0.93"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1", features = ["serde_derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-std",
    "macros",
] }
tower-lsp = { version = "0.20", features = ["runtime-tokio"] }
tree-sitter = "0.24"
# for local dev
# tree-sitter-ledger = { path = "../tree-sitter/tree-sitter-ledger" }
# temp: forked upstream
# tree-sitter-ledger = { git = "https://github.com/claytonrcarter/tree-sitter-ledger.git", rev = "eaaf3f92dc018ea84b382625059292e361a3ef88" }
# actual upstream
tree-sitter-ledger = { git = "https://github.com/cbarrete/tree-sitter-ledger.git", rev = "96c92d4908a836bf8f661166721c98439f8afb80" }
type-sitter = { version = "0.6", default-features = false }
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.39.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
textwrap = "0.16.1"
tracing = "0.1"
